navbar z-index fix

--- a/src/app/ui/navbar/navbar.component.css
+++ b/src/app/ui/navbar/navbar.component.css
@@ -14,6 +14,7 @@
     padding-right: 1rem;
     padding-bottom: 0.5rem;
     padding-left: 1rem;
+    z-index: 1;
 }
 
 /* @media (min-width: 992px) {
